--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,23 @@
-:root{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    font-family: Verdana, sans-serif;
+    background-color: white;
+    color: black;
+}
+
+body {
     text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: Verdana, sans-serif;
-    background-color: gray;
+    width: 100%;
+    height: 100vh;
 }
 
 .btn {
@@ -29,4 +37,9 @@
     box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
     transform: translateY(-0.1rem);
     transition: transform 150ms;
+}
+
+.dark-mode {
+    background-color: black;
+    color: white;
 }
